# SymGrad4T

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
SymGrad/: run.py  tensor.py
SymGrad/symbol/: compute.py
SymGrad/tests/: test_tensor.py
examples/: matrix_arith.py  matrix_sum.py  mlp.py  qwen2_mlp.py
examples/rms_norm/: README.md  rms_norm.py
python/symgrad4t/: __init__.py  func.py  tensor.py
python/symgrad4t/symbol/: compute.py
python/symgrad4t/tests/: test_func.py  test_tensor.py
